<resources>
    <string name="app_name">FabricaDeWallpapers</string>
    <string name="app_title">Fábrica de Wallpapers</string>
    <string name="storage_permission_explanation">Es necesario conceder el permiso de almacenamiento para poder guardar la imagen en el teléfono</string>
    <string name="storage_permission_title">Permiso de almacenamiento</string>
    <string name="image_saved_snackbar">Imagen guardada</string>
    <string name="wallpaper_set">Imagen establecida como fondo de pantalla</string>
    <string name="palettes_showcase_title">Escaparate de colores</string>
    <string name="gallery_title">Mi galería</string>
    <string name="no_likes_message">!Ups!\nParece que no hay wallpapers en tu lista de Me gusta</string>
    <string name="wallpaper_chooser_title">Patrones de los wallpapers</string>
    <string name="error_wallpaper">Ha habido un error generando wallpapers, por favor habilita más wallpapers en opciones</string>
    <string name="about_title">About Fábrica de Wallpapers</string>
    <string name="about_description">Made with ❤️</string>



    <!--Introduction-->
    <string name="Slide1_title">Bienvenido a la Fábrica de Wallpapers</string>
    <string name="Slide1_description">Con esta aplicación podrás generar bonitos fondos de pantalla únicos</string>
    <string name="Slide2_title">¿Cómo se utiliza?</string>
    <string name="Slide2_description">El funcionamiento es muy sencillo, la pantalla principal ya muestra un fondo de pantalla automáticamente generado</string>
    <string name="Slide3_title">¿No te convence?</string>
    <string name="Slide3_description">Pulsa el botón refrescar para generar un wallpaper nuevo, pulsa ✔ para establecerlo como fondo de pantalla, y pulsa el corazón para guardarlo</string>
    <string name="Slide4_title">Escaparate de colores</string>
    <string name="Slide4_description">Desliza la pantalla principal hacía la derecha y descubre nuevas combinacions de colores para los fondos de pantalla</string>
    <string name="Slide5_title">¡Por último!</string>
    <string name="Slide5_description">Utiliza la galería para visualizar tus ¡Me encanta!. Todos los fondos se guardarán en la galería de imágenes común para poder compartirlos.</string>

    <!--Preferences-->
    <!--TODO: Change these strings as it is a example from internet-->
    <string name="menu_settings">Opciones</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Frecuencia de actualización</string>
    <string name="pref_sync_frequency_summary">Establece cada cuanto tiempo quieres que se actualice el fondo de pantalla</string>
    <string name="pref_user_name">Nombre de usuario</string>
    <string name="pref_user_name_summary">Establece tu nombre de usuario</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Opciones de actualización</string>
    <string name="pref_init_presentation">Iniciar presentación de nuevo</string>
    <string name="pref_init_about_libraries">Información sobre las librerias</string>
    <string name="pref_other_info_category">Información adicional</string>


    <!--Bottom navigation-->
    <string name="tab_1">Fábrica</string>
    <string name="tab_2">Colores</string>
    <string name="tab_3">Me Gusta</string>

    <!--Dialogs-->
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_message">¿Estás seguro de que deseas eliminarlo?</string>
    <string name="dialog_delete_wallpaper_title">Eliminar wallpaper</string>

</resources>
