<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency"
            android:defaultValue="0"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other_info_category" >

    <Preference
        android:key="presentation_trigger"
        android:title="@string/pref_init_presentation"
        android:selectable="true"
        />
    <Preference
        android:key="about_libraries_trigger"
        android:title="@string/pref_init_about_libraries"
        android:selectable="true"
        />
    </PreferenceCategory>

</PreferenceScreen>